--- a/Clue organizer/clue.css
+++ b/Clue organizer/clue.css
@@ -1,16 +1,79 @@
 body{
-    background-color: brown;
+    background-image: url(istockphoto-513541610-612x612.jpg);
     color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(255, 255, 255, );
     font-family: sans-serif;
     font-style: italic;
     font-size: 30px;
 }
-.select_btn{
-    padding: 15px;
-    font-size: 15px;
-    border-radius: 3px;
-}
-
-.dropdown_menu{
+.dropbtn {
+    background-color: #10188db2;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    padding-left: 50px;
+  }
+  
+  .dropdown-content {
     display: none;
+    position: absolute;
+    background-color: #179b59;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: rgb(138, 52, 52);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #3f1645;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: #852a8d;}
+  
+.welcome{
+    font-size: 80px;
+    padding-left: 50px;
+}
+.heading{
+    font-size: 50px;
+    padding-left: 50px;
+}
+p{
+    padding-left: 50px;
+    padding-top: 10px;
+}
+.texteditor{
+    color: black;
+    margin-top: 50px;
+    padding-left: 50px;
+    margin-right: 50px;
+}
+.save{
+    color: #10188db2;
+    display: flex;
+    justify-content: flex-end;
+    button{
+        padding: 30px;
+        font-size: 20px;
+        margin-top: 50px;
+        margin-right: 80px;
+        border-radius: 15px;
+        background-color: #179b59;
+        font-weight: 700;
+        color: white;
+    }
 }
