Modified image path to new path of respective image

--- a/static/css/clue.css
+++ b/static/css/clue.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(istockphoto-513541610-612x612.jpg);
+    background-image: url(../images/clue.jpg);
     color: white;
     background-repeat: no-repeat;
     background-size: cover;
