--- a/static/css/ppl.css
+++ b/static/css/ppl.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(wallpaperflare.com_wallpaper.jpg);
+    background-image: url(../images/ppl.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
