--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="This is a The-Mind-Map to help Sherlock Holmes organize his clues">
 </head>
 <body>
-    <img src="assets/images/background-img.jpg" alt="">
+    <img src="../static/images/index.jpg" alt="">
     <div class="head">The-Mind-Map</div>
     <nav>
         <ul>
