Modified path of css file to respective path in new arrangement

--- a/templates/clue.html
+++ b/templates/clue.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clue Organizer</title>
-    <link rel="stylesheet" href="clue.css">
+    <link rel="stylesheet" href="../static/css/clue.css">
     <script src="https://cdn.ckeditor.com/ckeditor5/41.2.0/classic/ckeditor.js"></script>
 </head>
 
