--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Signup Page</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../static/css/login.css">
     <meta name="description" content="This is the login-signup page of our website">
 </head>
 <body>
