--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mind-map welcome page">
     <title>welcome</title>
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="../static/css/welcome.css">
 </head>
 <body>
     <div class="boxes">
