--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -3,17 +3,25 @@
     margin: 0;
     font-family: 'e epicure Bread';
 }
+#icon{
+    width: 30px;
+    cursor: pointer;
+}
 p{
     font-family: 'algerian';
     font-size: 15px;
     letter-spacing: normal;
 }
 :root {
-    --light_mode_body: #db3482;
-    --light_mode_text: #2b4d64;
     --dark_mode_body: rgb(39, 8, 8);
     --dark_mode_body2: rgba(96, 17, 17, 0.832);
     --dark_mode_text: rgb(255, 144, 75);
+}
+.light-theme{
+    --dark_mode_body: #db3482;
+    --dark_mode_body2: rgba(92, 125, 233, 0.832);
+    --dark_mode_text: #2b4d64;
+
 }
 .boxes{
     display: flex;
@@ -57,6 +65,6 @@ nav{
     font-size: 22px;
     padding: 20%;
     margin: 20%;
-    color: var(--light_mode_text);
-    background-color: var(--light_mode_body);
+    color: var(--dark_mode_text);
+    background-color: var(--dark_mode_body);
 }
