Added basic structure of login and signup page

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -24,13 +24,17 @@
                 Let's solve this mystery, Mr. Holmes
                 <br>
                 <br>
-                <button class="btn1 btns">
-                    Login
-                </button>
+                <form action="/login" method="get">
+                    <button class="btn1 btns" type="submit">
+                        Login
+                    </button>
+                </form>
                 <br>
-                <button class="btn2 btns">
-                    Signup
-                </button>
+                <form action="/signup" method="get">
+                    <button class="btn1 btns" type="submit">
+                        Sign Up
+                    </button>
+                </form>
             </div>
         </div>
     </div>
