--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,9 +10,6 @@
 <body>
     <div class="boxes">
         <div class="box1">
-            <p>
-                DEVdevta
-            </p>
             <div class="name">
                 <nav>THE</nav>
                 <nav>MIND</nav>
@@ -34,6 +31,9 @@
                 <button class="btn2 btns">
                     Signup
                 </button>
+                <div class="company">
+                    DEVDEVTA
+                </div>
             </div>
         </div>
     </div>
