--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="../static/css/login.css">
 
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <p>Login page banao</p>
-  </body>
+</head>
+<body>
+    <div class="container">
+        <h2>Login</h2>
+        <form action="/login_page" method="post">
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <input type="submit" value="Login">
+        </form>
+    </div>
+</body>
 </html>
