--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,11 @@
 
 </head>
 <body>
+    <div class="heading">
+       <center>
+        THE MIND MAP
+       </center> 
+    </div>
     <div class="container">
         <h2>Login</h2>
         <form action="/login_page" method="post">
