--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,7 +8,7 @@ body {
 }
 .heading{
     font-family: 'Crimes Times Six';
-    color: white;
+    color: rgb(46, 16, 3);
     font-size: 85px;
     margin-top: 5.5%;
 }
@@ -16,7 +16,7 @@ body {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #000000;
+    background-color: #723b00;
     border-radius: 5px;
     color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -34,7 +34,7 @@ input[type="text"], input[type="password"], input[type="submit"] {
     box-sizing: border-box;
 }
 input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #ff4000;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
