--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 <body>
+    <div class="heading">
+        <center>
+         THE MIND MAP
+        </center> 
+     </div>
     <div class="container" id="signup">
         <h2>Sign Up</h2>
         <form action="#" method="post">
@@ -24,7 +29,7 @@
             </div>
             <div>
                 <label for="confirm_password">Confirm Password:</label>
-                <input type="password_new" id="password_new" name="password_new" required>
+                <input type="password" id="password_new" name="password_new" required>
             </div>
             <input type="submit" value="Sign Up">
         </form>
