bug/corrected the route of login/signup forms

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
         <h2>Login</h2>
-        <form action="/login_page" method="post">
+        <form action="/login" method="post">
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
