--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
      </div>
     <div class="container" id="signup">
         <h2>Sign Up</h2>
-        <form action="#" method="post">
+        <form action="/signup" method="post">
             <div>
                 <label for="new_username">Username:</label>
                 <input type="text" id="new_username" name="new_username" required>
