--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,7 +17,7 @@
         <form action="/signup" method="post">
             <div>
                 <label for="new_username">Username:</label>
-                <input type="text" id="new_username" name="new_username" required>
+                <input type="text" id="new_username" name="username" required>
             </div>
             <div>
                 <label for="email">Email:</label>
