--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,11 @@
         THE MIND MAP
        </center> 
     </div>
+    <div class="box1">
+        <div class="switch" id="icon">
+            <img src="../static/images/dark_light_switch.svg" alt="">
+        </div>
+    </div>
     <div class="container">
         <h2>Login</h2>
         <form action="/login" method="post">
@@ -27,5 +32,18 @@
             <input type="submit" value="Login">
         </form>
     </div>
+    <script>
+        var icon = document.getElementById("icon");
+
+        icon.onclick = function () {
+            document.body.classList.toggle("light-theme");
+        }
+        if (document.body.classList.contains("light-theme")) {
+            icon.src = "../images/light_mode.svg";
+        }
+        else {
+            icon.src = "../images/dark_light_switch";
+        }
+    </script>
 </body>
 </html>
