--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -46,22 +46,25 @@
             <div class="switch" id="icon">
                 <img src="../static/images/dark_light_switch.svg" alt="">
             </div>
-            <!-- <div class="ls">
-            </div> -->
         </div>
     </div>
     <script>
         var icon = document.getElementById("icon");
 
-        icon.onclick = function () {
-            document.body.classList.toggle("light-theme");
-        }
-        if (document.body.classList.contains("light-theme")) {
-            icon.src = "../images/light_mode.svg";
-        }
-        else {
-            icon.src = "../images/dark_light_switch";
-        }
+icon.onclick = function () {
+    document.body.classList.toggle("light-theme");
+
+    // Access the image inside the icon div
+    var img = icon.querySelector('img');
+
+    // Check if body has light-theme class
+    if (document.body.classList.contains("light-theme")) {
+        img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
+    } else {
+        img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
+    }
+}
+
     </script>
 </body>
 
