--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,15 +1,34 @@
+:root{
+    --background-color:#f9f9f9;
+    --text:#333;
+    --submit-bg:#007bff;
+    --submit_text:white;
+}
+.dark-theme{
+    --background-color:#000000;
+    --text:#af2323;
+    --submit-bg:#098300;
+    --submit_text:rgb(195, 213, 101);
+}
 body{
     padding: 0;
     margin: 0;
     background-image: url(../images/dark_img.jpeg);
-    background-repeat: no-repeat;
+    background-repeat: round;
     background-size: cover;
+    width: 100%;
+    height: 100%;
 }
 .heading{
     font-family: 'Crimes Times Six';
     color: rgb(255, 255, 255);
     font-size: 85px;
-    margin-top: 5.5%;}
+    margin-top: 5.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
 .container {
     width: 80%;
     max-width: 400px;
@@ -17,14 +36,14 @@ body{
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
+    background-color: var(--background-color);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* Heading styling */
 h2 {
     text-align: center;
-    color: #333;
+    color: var(--text);
 }
 
 /* Form element styling */
@@ -35,7 +54,7 @@ form {
 label {
     display: block;
     margin-bottom: 5px;
-    color: #666;
+    color: var(--text);
 }
 
 input[type="text"],
@@ -55,8 +74,8 @@ input[type="submit"] {
     padding: 10px;
     border: none;
     border-radius: 3px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: var(--submit-bg);
+    color: var(--submit_text);
     cursor: pointer;
 }
 
