--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="../static/css/signup.css">
 </head>
+
 <body>
     <div class="heading">
         <center>
-         THE MIND MAP
-        </center> 
-     </div>
+            THE MIND MAP
+        </center>
+        <div class="switch" id="icon">
+            <img src="../static/images/dark_light_switch.svg" alt="">
+        </div>
+    </div>
     <div class="container" id="signup">
         <h2>Sign Up</h2>
         <form action="/signup" method="post">
@@ -34,5 +39,24 @@
             <input type="submit" value="Sign Up">
         </form>
     </div>
+    <script>
+        var icon = document.getElementById("icon");
+
+        icon.onclick = function () {
+            document.body.classList.toggle("dark-theme");
+
+            // Access the image inside the icon div
+            var img = icon.querySelector('img');
+
+            // Check if body has light-theme class
+            if (document.body.classList.contains("dark-theme")) {
+                img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
+            } else {
+                img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
+            }
+        }
+
+    </script>
 </body>
+
 </html>
