--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,14 +1,14 @@
 :root{
-    --background-color:#f9f9f9;
-    --text:#333;
-    --submit-bg:#007bff;
+    --background-color:rgba(255, 246, 226, 0.909);
+    --text: rgb(255, 170, 0);
+    --submit-bg: rgb(255, 170, 0);
     --submit_text:white;
 }
 .dark-theme{
-    --background-color:#000000;
-    --text:#af2323;
-    --submit-bg:#098300;
-    --submit_text:rgb(195, 213, 101);
+    --background-color: rgba(19, 10, 0, 0.8);
+    --text: rgba(255, 145, 0, 0.947);
+    --submit-bg: rgba(255, 145, 0, 0.947);
+    --submit_text:rgb(0, 0, 0);
 }
 body{
     padding: 0;
