made slight change in confirm password

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -34,7 +34,7 @@
             </div>
             <div>
                 <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="password_new" name="password_new" required>
+                <input type="password" id="confirmP" name="confirmP" required>
             </div>
             <input type="submit" value="Sign Up">
         </form>
