--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,15 +1,15 @@
 :root{
     --background-color:rgba(255, 246, 226, 0.8);
-    --text: rgb(255, 170, 0);
+    --text: black;
     --submit-bg: rgb(255, 170, 0);
-    --submit_text:white;
+    --submit_text: black;
     --form-text:black;
 }
 .dark-theme{
     --background-color: rgba(19, 10, 0, 0.8);
-    --text: rgba(255, 145, 0, 0.947);
+    --text: white;
     --submit-bg: rgba(255, 145, 0, 0.947);
-    --submit_text:rgb(0, 0, 0);
+    --submit_text:white;
     --form-text:white;
 }
 .box_main{
