--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,65 +2,88 @@
     padding: 0;
     margin: 0;
 }
-/* Change the font to some epic looking theme */
-.head{
-    font-size: 170px;
-    color: rgb(145, 193, 33);
-    text-align: center;
-    text-justify: center center;
-    font-style: italic;
-    position: relative;
-    width: 100vw;
-    height: 80vh;
+@media only screen and (max-width: 768px) {
+    .main{
+        
+    }
 }
+:root{
+    --nav:rgb(103, 18, 221);
+    --nav_text:white;
+    --separator:rgb(99, 98, 98);
+    --section:rgb(66, 192, 194);
+}
+.dark-theme{
+    --nav:rgb(12, 54, 43);
+    --nav_text:rgb(187, 0, 0);
+    --separator:rgb(255, 0, 212);
+    --section:rgb(255, 255, 8);
 
-body{
-    background-color: rgb(233,244,133);
-    img{
-        height: 100%;
-        width: 100%;
-        filter: blur(0.7px);
-        z-index: -1;
-        position: fixed;
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
 }
-}
+/* Change the font to some epic looking theme */
 nav{
-    background-color: rgb(67, 60, 77);
+    background-color: var(--nav);
     font-style: italic;
     z-index: 20;
-    color: white;
-    font-size: 20px;
+    color: var(--nav_text);
+    font-size: 19px;
     width: 100vw;
+    position: fixed;
+}
+.switch img{
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    margin: 0;
 }
 ul{
     display: flex;
     justify-content: space-around;
-
+    
 }
 ul li{
     list-style: none;
-    padding: 20px;
+    padding: 16px;
 }
-.dashboard{
-    background-image: url(../images/dashboard.png);
-    height: 85vh;
-    background-size: cover;
-    width: 100vw;
-    display: grid;
-    grid-template-columns: auto auto;
-    align-items: center;
-    
-}
-.box{
-    background-image: url(../images/box.jpg);
-    padding: 20px;
-    border-radius: 30px;
-    text-align: center;
-    color: white;
-    font-size: 25px;
-    margin: 50px;
 
+.separator{
+    height: 1.5vh;
+    background-color: var(--separator);
+}
+
+section {
+    background-color: var(--section);
+    color: text;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 75vh;
+    position: relative;
+    padding: 30px;
+    font-size: 50px;
+}
+.desc{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    padding: 50px;
+}
+
+.img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    img{
+        border-radius: 50px;
+        width: 100%;
+        height: 100%;
+        
+    }
+}
+.heading{
+    
+    font-family: 'Crimes Times Six';
 }
