--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -97,11 +97,15 @@ p{
     display: flex;
 }
 .name{
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-size: 60px;
+}
+.heading{
+    color: black
 }
 nav{
     padding: 6%;
