--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,14 +1,14 @@
 :root{
     --background-color:rgba(245, 239, 225, 0.89);
-    --text: rgb(255, 162, 0);
+    --text: black;
     --submit-bg: rgb(255, 162, 0);
-    --submit_text:white;
+    --submit_text:black;
 }
 .dark-theme{
     --background-color: rgba(19, 10, 0, 0.8);
-    --text: rgba(255, 145, 0, 0.966);
+    --text: white;
     --submit-bg: rgba(255, 145, 0, 0.947);
-    --submit_text:rgb(0, 0, 0);
+    --submit_text:white;
 }
 body{
     padding: 0;
