--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,16 @@
 *{
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 @media only screen and (max-width: 768px) {
     .main{
-        
+        display: flex;
+        flex-direction: column;
+    }
+    section{
+        display: flex;
+        flex-direction: column-reverse;
     }
 }
 :root{
