--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
             </li>
         </ul>
     </nav>
+    <div class="main">
         <section>
             <div class="desc">
                 <div class="heading">
@@ -71,9 +72,7 @@
         </section>
         <div class="separator">
         </div>
-    </div>
-    
-        <section class="first">
+        <section>
             <div class="img">
                 <img src="../static/images/ppl.jpg">
             </div>
@@ -87,6 +86,7 @@
             </div>
         </section>
     </div>
+        
     <script>
         var icon = document.getElementById("icon");
 
