--- a/templates/clue.html
+++ b/templates/clue.html
@@ -15,11 +15,16 @@
         <div class="welcome font">Welcome Mr. Holmes,
         </div>
         <div class="dateIn">
-            <h5>Select the date: </h5>
-            <input type="date" id="date">
+            <div>Select the date: </div>
+            <div>
+                <input type="date" id="date">
+            </div>
+        </div>
+        <div class="switch" id="icon">
+            <img src="../static/images/dark_light_switch.svg" alt="">
         </div>
     </div>
-    <div class="heading font">Write your clues here: </div>
+    <div class="heading">Write your clues here: </div>
     <!-- category selection -->
     <p>Choose from the following categories:</p>
     <select id="clue">
@@ -31,17 +36,16 @@
     </select>
     <div class="texteditor">
         <textarea name="content" id="editor" cols="30" rows="10"></textarea>
-        <div class="save">
-            <div class="text">
-                Enter the time:
-                <br>
-                <input type="time" id="time">
-            </div>
-            <div class="btn">
-                <button>Add to my clue log</button>
-            </div>
-        </div>
     </div>
+    <div class="save">
+        <div class="text">
+            Enter the time:
+            <br>
+            <input type="time" id="time">
+        </div>
+        <div class="btn">
+            <button>Add to my clue log</button>
+        </div>
     </div>
     <script>
         ClassicEditor
@@ -49,6 +53,22 @@
             .catch(error => {
                 console.error(error);
             });
+
+        var icon = document.getElementById("icon");
+
+        icon.onclick = function () {
+            document.body.classList.toggle("dark-theme");
+
+            // Access the image inside the icon div
+            var img = icon.querySelector('img');
+
+            // Check if body has light-theme class
+            if (document.body.classList.contains("dark-theme")) {
+                img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
+            } else {
+                img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
+            }
+        }
     </script>
 </body>
 
