--- a/static/css/clue.css
+++ b/static/css/clue.css
@@ -7,6 +7,21 @@
   --text:rgb(255, 255, 255);
 
 }
+@media only screen and (max-width: 768px) {
+  body{
+    text-align: center;
+  }
+  .date{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .save{
+    display: flex;
+    flex-direction: column;
+  }
+}
 body{
     color: var(--text);
     background-repeat: no-repeat;
@@ -117,7 +132,6 @@ p{
         padding: 30px;
         font-size: 20px;
         margin-top: 50px;
-        margin-right: 80px;
         border-radius: 15px;
         background-color: #179b59;
         font-weight: 700;
