light and dark mode theme of home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
                     Clue Organizer
                 </div>
                 <div class="description">
-                    Yahan Kuch sexy sa description daal do
+                    Ready to get organized? Let's start!
                 </div>
             </div>
             <div class="img">
-                <img src="../static/images/ppl.jpg">
+                <img src="../static/images/clue organizer.webp">
             </div>
         </section>
         <div class="separator">
