Added profile section

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,21 @@
                 </div>
             </div>
         </section>
+        <div class="separator">
+        </div>
+        <section>
+            <div class="desc">
+                <div class="heading">
+                    Profile
+                </div>
+                <div class="description">
+                    Yahan Kuch sexy sa description daal do
+                </div>
+            </div>
+            <div class="img">
+                <img src="../static/images/ppl.jpg">
+            </div>
+        </section>
     </div>
         
     <script>
