Made various links on index page clickable

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <section>
             <div class="desc">
                 <div class="heading">
-                    Clue Organizer
+                    <a href="/clue">Clue Organizer</a>
                 </div>
                 <div class="description">
                     Ready to get organized? Let's start!
@@ -48,7 +48,7 @@
             </div>
             <div class="desc">
                 <div class="heading">
-                    People Tracker
+                    <a href="/people">People Tracker</a>
                 </div>
                 <div class="description">
                     Yahan Kuch sexy sa description daal do
@@ -60,7 +60,7 @@
         <section>
             <div class="desc">
                 <div class="heading">
-                    Timeline
+                    <a href="/timeline">Timeline</a>
                 </div>
                 <div class="description">
                     Yahan Kuch sexy sa description daal do
@@ -78,7 +78,7 @@
             </div>
             <div class="desc">
                 <div class="heading">
-                    Search
+                    <a href="/search">Search</a>
                 </div>
                 <div class="description">
                     Yahan Kuch sexy sa description daal do
@@ -90,7 +90,7 @@
         <section>
             <div class="desc">
                 <div class="heading">
-                    Profile
+                    <a href="/profile">Profile</a>
                 </div>
                 <div class="description">
                     Yahan Kuch sexy sa description daal do
