Made log out button clickable

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <li>Timeline</li>
             <li>Search</li>
             <li>Profile</li>
-            <li>Log Out</li>
+            <li><a href="/logout">Log Out</a></li>
             <li>
                 <div class="switch" id="icon">
                     <img src="../static/images/dark_light_switch.svg" alt="">
